Package_Tools/include-C/vips/h/connection.h

#define VIPS_CONNECTION_H
#define VIPS_TYPE_CONNECTION (vips_connection_get_type())
#define VIPS_CONNECTION(obj) \
	(G_TYPE_CHECK_INSTANCE_CAST((obj), \
		VIPS_TYPE_CONNECTION, VipsConnection))
#define VIPS_CONNECTION_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_CAST((klass), \
		VIPS_TYPE_CONNECTION, VipsConnectionClass))
#define VIPS_IS_CONNECTION(obj) \
	(G_TYPE_CHECK_INSTANCE_TYPE((obj), VIPS_TYPE_CONNECTION))
#define VIPS_IS_CONNECTION_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_TYPE((klass), VIPS_TYPE_CONNECTION))
#define VIPS_CONNECTION_GET_CLASS(obj) \
	(G_TYPE_INSTANCE_GET_CLASS((obj), \
		VIPS_TYPE_CONNECTION, VipsConnectionClass))
/* Communicate with something like a socket or pipe.
 */
typedef struct _VipsConnection {
	VipsObject parent_object;

	/*< private >*/

	/* Read/write this fd if connected to a system pipe/socket. Override
	 * ::read() and ::write() to do something else.
	 */
	int descriptor;

	/* A descriptor we close with vips_tracked_close().
	 */
	int tracked_descriptor;

	/* A descriptor we close with close().
	 */
	int close_descriptor;

	/* If descriptor is a file, the filename we opened. Handy for error
	 * messages.
	 */
	char *filename;

} VipsConnection;
typedef struct _VipsConnectionClass {
	VipsObjectClass parent_class;

} VipsConnectionClass;
extern
GType vips_connection_get_type(void);
extern
const char *vips_connection_filename(VipsConnection *connection);
extern
const char *vips_connection_nick(VipsConnection *connection);
extern
void vips_pipe_read_limit_set(gint64 limit);
#define VIPS_TYPE_SOURCE (vips_source_get_type())
#define VIPS_SOURCE(obj) \
	(G_TYPE_CHECK_INSTANCE_CAST((obj), \
		VIPS_TYPE_SOURCE, VipsSource))
#define VIPS_SOURCE_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_CAST((klass), \
		VIPS_TYPE_SOURCE, VipsSourceClass))
#define VIPS_IS_SOURCE(obj) \
	(G_TYPE_CHECK_INSTANCE_TYPE((obj), VIPS_TYPE_SOURCE))
#define VIPS_IS_SOURCE_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_TYPE((klass), VIPS_TYPE_SOURCE))
#define VIPS_SOURCE_GET_CLASS(obj) \
	(G_TYPE_INSTANCE_GET_CLASS((obj), \
		VIPS_TYPE_SOURCE, VipsSourceClass))
typedef struct _VipsSourceClass {
	VipsConnectionClass parent_class;

	/* Subclasses can define these to implement other source methods.
	 */

	/* Read from the source into the supplied buffer, args exactly as
	 * read(2). Set errno on error.
	 *
	 * We must return gint64, since ssize_t is often defined as unsigned
	 * on Windows.
	 */
	gint64 (*read)(VipsSource *, void *, size_t);

	/* Seek to a certain position, args exactly as lseek(2). Set errno on
	 * error.
	 *
	 * Unseekable sources should always return -1. VipsSource will then
	 * seek by _read()ing bytes into memory as required.
	 *
	 * We have to use int64 rather than off_t, since we must work on
	 * Windows, where off_t can be 32-bits.
	 */
	gint64 (*seek)(VipsSource *, gint64, int);

} VipsSourceClass;
extern
GType vips_source_get_type(void);
extern
VipsSource *vips_source_new_from_descriptor(int descriptor);
extern
VipsSource *vips_source_new_from_file(const char *filename);
extern
VipsSource *vips_source_new_from_blob(VipsBlob *blob);
extern
VipsSource *vips_source_new_from_target(VipsTarget *target);
extern
VipsSource *vips_source_new_from_memory(const void *data, size_t size);
extern
VipsSource *vips_source_new_from_options(const char *options);
extern
void vips_source_minimise(VipsSource *source);
extern
int vips_source_unminimise(VipsSource *source);
extern
int vips_source_decode(VipsSource *source);
extern
gint64 vips_source_read(VipsSource *source, void *data, size_t length);
extern
gboolean vips_source_is_mappable(VipsSource *source);
extern
gboolean vips_source_is_file(VipsSource *source);
extern
const void *vips_source_map(VipsSource *source, size_t *length);
extern
VipsBlob *vips_source_map_blob(VipsSource *source);
extern
gint64 vips_source_seek(VipsSource *source, gint64 offset, int whence);
extern
int vips_source_rewind(VipsSource *source);
extern
gint64 vips_source_sniff_at_most(VipsSource *source,
	unsigned char **data, size_t length);
extern
unsigned char *vips_source_sniff(VipsSource *source, size_t length);
extern
gint64 vips_source_length(VipsSource *source);
#define VIPS_TYPE_SOURCE_CUSTOM (vips_source_custom_get_type())
#define VIPS_SOURCE_CUSTOM(obj) \
	(G_TYPE_CHECK_INSTANCE_CAST((obj), \
		VIPS_TYPE_SOURCE_CUSTOM, VipsSourceCustom))
#define VIPS_SOURCE_CUSTOM_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_CAST((klass), \
		VIPS_TYPE_SOURCE_CUSTOM, VipsSourceCustomClass))
#define VIPS_IS_SOURCE_CUSTOM(obj) \
	(G_TYPE_CHECK_INSTANCE_TYPE((obj), VIPS_TYPE_SOURCE_CUSTOM))
#define VIPS_IS_SOURCE_CUSTOM_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_TYPE((klass), VIPS_TYPE_SOURCE_CUSTOM))
#define VIPS_SOURCE_CUSTOM_GET_CLASS(obj) \
	(G_TYPE_INSTANCE_GET_CLASS((obj), \
		VIPS_TYPE_SOURCE_CUSTOM, VipsSourceCustomClass))
/* Subclass of source_custom with signals for handlers. This is supposed to be
 * useful for language bindings.
 */
typedef struct _VipsSourceCustom {
	VipsSource parent_object;

} VipsSourceCustom;
typedef struct _VipsSourceCustomClass {
	VipsSourceClass parent_class;

	/* The action signals clients can use to implement read and seek.
	 * We must use gint64 everywhere since there's no G_TYPE_SIZE.
	 */

	gint64 (*read)(VipsSourceCustom *, void *, gint64);
	gint64 (*seek)(VipsSourceCustom *, gint64, int);

} VipsSourceCustomClass;
typedef struct _VipsGInputStream {
	GInputStream parent_instance;

	/*< private >*/

	/* The VipsSource we wrap.
	 */
	VipsSource *source;

} VipsGInputStream;
typedef struct _VipsGInputStreamClass {
	GInputStreamClass parent_class;

} VipsGInputStreamClass;
typedef struct _VipsSourceGInputStream {
	VipsSource parent_instance;

	/*< private >*/

	/* The GInputStream we wrap.
	 */
	GInputStream *stream;

	GSeekable *seekable;
	GFileInfo *info;

} VipsSourceGInputStream;
typedef struct _VipsSourceGInputStreamClass {
	VipsSourceClass parent_class;

} VipsSourceGInputStreamClass;
typedef struct _VipsTargetClass {
	VipsConnectionClass parent_class;

	/* Write to output. Args exactly as write(2).
	 *
	 * We must return gint64, since ssize_t is often defined as unsigned
	 * on Windows.
	 */
	gint64 (*write)(VipsTarget *, const void *, size_t);

	/* Deprecated in favour of ::end.
	 */
	void (*finish)(VipsTarget *);

	/* libtiff needs to be able to seek and read on targets,
	 * unfortunately.
	 *
	 * This will not work for eg. pipes, of course.
	 */

	/* Read from the target into the supplied buffer, args exactly as
	 * read(2). Set errno on error.
	 *
	 * We must return gint64, since ssize_t is often defined as unsigned
	 * on Windows.
	 */
	gint64 (*read)(VipsTarget *, void *, size_t);

	/* Seek output. Args exactly as lseek(2).
	 */
	off_t (*seek)(VipsTarget *, off_t offset, int whence);

	/* Output has been generated, so do any clearing up,
	 * eg. copy the bytes we saved in memory to the target blob.
	 */
	int (*end)(VipsTarget *);

} VipsTargetClass;
/* Output to something like a socket, pipe or memory area.
 */
typedef struct _VipsTargetCustom {
	VipsTarget parent_object;

} VipsTargetCustom;
typedef struct _VipsTargetCustomClass {
	VipsTargetClass parent_class;

	/* The action signals clients can use to implement write and finish.
	 * We must use gint64 everywhere since there's no G_TYPE_SIZE.
	 */

	gint64 (*write)(VipsTargetCustom *, const void *, gint64);
	void (*finish)(VipsTargetCustom *);
	gint64 (*read)(VipsTargetCustom *, void *, gint64);
	gint64 (*seek)(VipsTargetCustom *, gint64, int);
	int (*end)(VipsTargetCustom *);

} VipsTargetCustomClass;